CRM - Adding and Listing Customers Implementation

--- a/web-customer-tracker/src/main/webapp/WEB-INF/web.xml
+++ b/web-customer-tracker/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,8 @@ http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee" id="WebAp
   <absolute-ordering/>
 
   <welcome-file-list>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>./WEB-INF/view/index.jsp</welcome-file>
+    <welcome-file>./WEB-INF/view/index.html</welcome-file>
   </welcome-file-list>
 
   <servlet>
