--- a/web-customer-tracker/pom.xml
+++ b/web-customer-tracker/pom.xml
@@ -63,8 +63,11 @@
       <artifactId>c3p0</artifactId>
       <version>0.9.1.2</version>
     </dependency>
-
-
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.9.7</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>web-customer-tracker</finalName>
