--- a/web-customer-tracker/pom.xml
+++ b/web-customer-tracker/pom.xml
@@ -68,6 +68,11 @@
       <artifactId>aspectjweaver</artifactId>
       <version>1.9.7</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.9.5</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>web-customer-tracker</finalName>
